# aws-cli

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  aws_object.py  conftest.py  main.py  pyproject.toml
scripts/: awsctl  awsctl.ps1  install.ps1  install.sh
tests/: README.md  s3_test_utils.py  test_aws_integration.py  test_aws_object.py  test_ec2.py  test_route53.py  test_s3.py
tests/integration/: conftest.py  test_integration_aws_object.py  test_integration_ec2.py  test_integration_route53.py  test_integration_s3.py
