[project]
name = "aws-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.13",
    "click>=8.2.1",
    "moto>=5.1.11",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "moto[ec2,iam,s3,route53]>=5.0.0",
    "pytest-mock>=3.12.0",
]
